# fcl

./: cmd-load
baryon_pi_rescattering_32Dfine/: CMakeLists.txt  CMakeLists_ver_1.0.txt  Makefile  Makefile2  Makefile_meson  baryon-pion-block-acc.h  baryon-pion-coefficient.h  baryon-pion-two-point-function-arbitrary-fsel-MATE-ULTRA-MAGIC-PRO.h  baryon-pion-two-point-function-arbitrary-fsel-MATE-ULTRA-MAGIC.h  baryon-pion-two-point-function-arbitrary-fsel-MATE-ULTRA.h  baryon-pion-two-point-function-arbitrary-fsel-NOVA-ULTRA-PRO.h  baryon-pion-two-point-function-arbitrary-fsel-NOVA-ULTRA.h  baryon-pion-two-point-function-arbitrary-fsel-NOVA.h  baryon-pion-two-point-function-arbitrary-fsel-disconnect-MATE-ULTRA-MAGIC-PRO.h  baryon-pion-two-point-function-arbitrary-fsel.h  baryon-pion-two-point-function-arbitrary.h  baryon-pion-two-point-function-disconnect-arbitrary.h  baryon-pion-two-point-function-disconnect-fsel.h  baryon-pion-two-point-function-disconnect.h  baryon-pion-two-point-function-fsel.h  baryon-pion-two-point-function.h  block_contraction.h  build.out  cancel.sh  clean.sh  clean_run_cmake.sh  clean_run_cmake_2.sh  cmd-load  compute-utils.h  configs.h  contract_block.h  data-load-base.h  data-load.h  data-paths.h  delete.sh  four-point-time-system.h  fsel_test.h  intial_cmake  main.cpp  meson.build  (+18 more)
proton_32D/: cancel.sh  compute-utils.h  configs.h  contract_proton.h  current_twop.h  current_twop_noama.h  current_twop_pp.h  current_twop_sp.h  data-load-base.h  data-load.h  data-paths.h  main.cpp  new-matrix.h  pion_twop_psel.h  pion_twop_psel_pz.h  pion_twop_psrc.h  pion_twop_smear.h  pion_twop_smear_pz.h  proton_fourp_disconnected.h  proton_fourp_disconnected_asym.h  proton_fourp_disconnected_coef.h  proton_fourp_disconnected_coef_backup.h  proton_fourp_disconnected_smear.h  proton_fourp_disconnected_smear_split.h  proton_fourp_psel.h  proton_fourp_psel_asym.h  proton_fourp_psel_coef.h  proton_fourp_psel_coef_test_1270.h  proton_fourp_psel_test.h  proton_fourp_psel_test1.h  proton_fourp_psel_test2.h  proton_fourp_psrc_split.h  proton_fourp_smear.h  proton_fourp_smear_9to11.h  proton_threep_psel.h  proton_threep_smear.h  proton_threep_smear_point.h  proton_twop_psrc.h  proton_twop_psrc_pselsnk.h  proton_twop_psrc_pselsnk_coef.h  (+12 more)
qlattice_new/: log.Cuba.txt  log.build.txt  log.compiler-wrappers.txt  log.dist-update-hash.txt  log.eigen.txt  log.fftw-float-mpi.txt  log.fftw-mpi.txt  log.qlat-examples-cpp.txt  log.qlat-utils.txt  log.qlat.txt  log.setenv-build.txt  log.setenv.txt  setenv.sh
qlattice_new/build-qlat-utils/: .ninja_deps  (+3 more)
(+41 files in other folders)
